# tasky

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/tasky/: __init__.py  app.py  app.tcss
src/tasky_tui/: __init__.py  __main__.py  app.py  app.tcss  archive.py  clearing.py  deleting.py  editing.py  filing.py  models.py  notes.py  projects.py  status.py  storage.py  tags.py  widgets.py
tests/: conftest.py  test_app.py  test_archive.py  test_archive_view.py  test_clearing.py  test_delete.py  test_edit.py  test_notes.py  test_notes_delete.py  test_notes_drawer.py  test_projects.py  test_projects_pane.py  test_shortcuts.py  test_storage.py  test_tags.py
