[project]
name = "tasky"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Akshay Prabhu", email = "akshay.prabhu.mulki@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "textual>=8.2.8",
]

[project.scripts]
tasky = "tasky:main"

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"
